k8s/overlays/prod/backend-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-score-backend
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: backend
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "2000m"
