k8s/overlays/prod/frontend-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-score-frontend
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: frontend
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
